fixed header overflow bug

--- a/media/styles/style.css
+++ b/media/styles/style.css
@@ -6,7 +6,7 @@ a { color: rgba(117, 156, 176, 1.0); }
 
 h3 { margin-bottom: 5px; }
 
-.header { height: 100px; padding: 20px 40px; background: transparent url(../images/stripes.png) 0 0 repeat-x; position: relative; }
+.header { overflow: hidden; height: 100px; padding: 20px 40px; background: transparent url(../images/stripes.png) 0 0 repeat-x; position: relative; }
 .header h1 { color: #444; font-size: 60px; position: absolute; left: 211px; top: 19px; }
 .header .subtext { position: absolute; top: 88px; left: 213px; font-size: 26px; color: #888; font-weight: lighter; }
 .header .request { float: right; }
